@@ -3,7 +3,8 @@
 ## Enhancements
  * Improved [Disable-IEEnhancedSecurityConfiguration](http://get-carbon.org/help/Install-IisAppPool.html) and [Enable-IEActivationPermissions](http://get-carbon.org/help/Enable-IEActivationPermissions.html) for enabling Internet Explorer to run headless by non-priveleged users.
  * Changed the way [Invoke-WindowsInstaller](http://get-carbon.org/help/Invoke-WindowsInstaller.html) waits for MSI to finish installing: instead of searching for any MSI process, it now searches for an MSI process that is a child of the current PowerShell process.
- * Improved how [Add-GroupMembers](http://get-carbon.org/help/Add-GroupMembers.html) finds group members in cross-domain environments.
+ * Simplified how [Add-GroupMembers](http://get-carbon.org/help/Add-GroupMembers.html) adds group members.
+
 
  
 # 0.3.0 (28 September 2012)
